--- a/app/vviews/admin/html/sidebar.ejs
+++ b/app/vviews/admin/html/sidebar.ejs
@@ -6,7 +6,7 @@
         {name: 'Articles', icon: 'fa-newspaper', link: `${systemConfig.prefixAdmin}/articles`},
         {name: 'Sliders', icon: 'fa-images', link: `${systemConfig.prefixAdmin}/sliders`},
         {name: 'Menu', icon: 'fas fa-bars', link: `${systemConfig.prefixAdmin}/menu`},
-        {name: 'Rss', icon: 'fas fa-rss', link: `${systemConfig.prefixAdmin}/rss`},
+        // {name: 'Rss', icon: 'fas fa-rss', link: `${systemConfig.prefixAdmin}/rss`},
         {name: 'Settings', icon: 'fas fa-cog', link: `${systemConfig.prefixAdmin}/settings`},
         {name: 'Users', icon: 'fa-user', link: `${systemConfig.prefixAdmin}/users`},
     ];
