--- a/app/vviews/admin/html/sidebar.ejs
+++ b/app/vviews/admin/html/sidebar.ejs
@@ -3,7 +3,7 @@
         {name: 'Dashboard', icon: 'fa-tachometer-alt', link: `${systemConfig.prefixAdmin}/dashboard`},
         {name: 'Products', icon: 'fa-file', link: `${systemConfig.prefixAdmin}/products`},
         {name: 'Categories', icon: 'fa-window-restore', link: `${systemConfig.prefixAdmin}/categories`},
-        {name: 'Articles', icon: 'fa-newspaper', link: `${systemConfig.prefixAdmin}/articles`},
+        // {name: 'Articles', icon: 'fa-newspaper', link: `${systemConfig.prefixAdmin}/articles`},
         {name: 'Sliders', icon: 'fa-images', link: `${systemConfig.prefixAdmin}/sliders`},
         {name: 'Menu', icon: 'fas fa-bars', link: `${systemConfig.prefixAdmin}/menu`},
         // {name: 'Rss', icon: 'fas fa-rss', link: `${systemConfig.prefixAdmin}/rss`},
