--- a/app/vviews/admin/helpers/filter-isAdmin.ejs
+++ b/app/vviews/admin/helpers/filter-isAdmin.ejs
@@ -1,9 +1,9 @@
 <% 
-    filterStatusHelper = (collection, statusFilter,  keyword) => { 
+    filterIsAdminHelper = (collection, isAdminFilter,  keyword) => { 
         let xhtmlResult = '';
-        statusFilter.forEach((item)=> {
+        isAdminFilter.forEach((item)=> {
             if(item.count == 0) return;
-            let link = systemConfig.prefixAdmin + '/' + collection + '/status/' + item.value;
+            let link = systemConfig.prefixAdmin + '/' + collection + '/isAdmin/' + item.value;
             if(keyword !== "" && keyword !== undefined) link += '?keyword=' + keyword;
 
             xhtmlResult += `<a class="mr-1 btn btn-sm  btn-${item.class}" href="${link}">
@@ -13,9 +13,6 @@
         return xhtmlResult;
     } 
 %>
-
-
-
 
 
 
