--- a/app/vviews/admin/pages/products/form.ejs
+++ b/app/vviews/admin/pages/products/form.ejs
@@ -1,127 +1,150 @@
 <% include ./../../helpers/image %>
 <% include ./../../helpers/selectCategory %>
-<% 
-	const collection = "products";
-	const linkPrefix = systemConfig.prefixAdmin + `/${collection}/`;
-	errors = errors ?? {};
-	const folderUpload 	= `uploads/${collection}/`;
-%>
+<% const collection="products" ; const linkPrefix=systemConfig.prefixAdmin + `/${collection}/`; errors=errors ??
+			{}; const folderUpload=`uploads/${collection}/`; %>
 
 <div class="card card-info card-outline">
-	<form action="<%= linkPrefix %>save/" method="POST" class="mb-0" name="form-upload" enctype="multipart/form-data" >
-		<div class="card-body">
-		
-			<div class="form-group row">
-				<label for="name" class="col-sm-2 col-form-label text-sm-right required">Name</label>
-				<div class="col-xs-12 col-sm-8">
-					<input type="text" name="name" value="<%= item.name %>" class="form-control form-control-sm <%= errors.name && 'is-invalid' %>" onKeyUp="handleSlug(
+  <form action="<%= linkPrefix %>save/" method="POST" class="mb-0" name="form-upload" enctype="multipart/form-data">
+    <div class="card-body">
+
+      <div class="form-group row">
+        <label for="name" class="col-sm-2 col-form-label text-sm-right required">Name</label>
+        <div class="col-xs-12 col-sm-8">
+          <input type="text" name="name" value="<%= item.name %>" class="form-control form-control-sm <%= errors.name && 'is-invalid' %>" onKeyUp="handleSlug(
 						'<%= linkPrefix %>',
 						this,
 						)">
-					<%- `<span class="error invalid-feedback">${errors.name}</span>` %>
-				</div>
-			</div>
+          <%- `<span class="error invalid-feedback">${errors.name}</span>` %>
+        </div>
+      </div>
 
-			<div class="form-group row">
-				<label for="slug" class="col-sm-2 col-form-label text-sm-right required">Slug</label>
-				<div class="col-xs-12 col-sm-8">
-					<input type="text" name="slug" value="<%= item.slug %>" class="form-control form-control-sm <%= errors.slug && 'is-invalid' %>">
-					<%- `<span class="error invalid-feedback">${errors.slug}</span>` %>
-				</div>
-			</div>
-			<div class="form-group row">
-				<label for="price" class="col-sm-2 col-form-label text-sm-right required">Price</label>
-				<div class="col-xs-12 col-sm-8">
-					<input type="text" name="price" value="<%= item.price %>" class="form-control form-control-sm <%= errors.price && 'is-invalid' %>">
-					<%- `<span class="error invalid-feedback">${errors.price}</span>` %>
-				</div>
-			</div>
-			
+      <div class="form-group row">
+        <label for="slug" class="col-sm-2 col-form-label text-sm-right required">Slug</label>
+        <div class="col-xs-12 col-sm-8">
+          <input type="text" name="slug" value="<%= item.slug %>" class="form-control form-control-sm <%= errors.slug && 'is-invalid' %>">
+          <%- `<span class="error invalid-feedback">${errors.slug}</span>` %>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="price" class="col-sm-2 col-form-label text-sm-right required">Price</label>
+        <div class="col-xs-12 col-sm-8">
+          <input type="text" name="price" value="<%= item.price %>" class="form-control form-control-sm <%= errors.price && 'is-invalid' %>">
+          <%- `<span class="error invalid-feedback">${errors.price}</span>` %>
+        </div>
+      </div>
 
-			<div class="form-group row">
-				<label for="name" class="col-sm-2 col-form-label text-sm-right required">Category</label>
-				<div class="col-xs-12 col-sm-8">
-						<%- selectCategory(listCategory,item.categoriesId,'',errors.categoriesId) %>
-					</select>
-				</div>
-			</div>
 
-			<div class="form-group row">
-				<label for="name" class="col-sm-2 col-form-label text-sm-right required">Ordering</label>
-				<div class="col-xs-12 col-sm-8">
-					<input type="text" name="ordering" value="<%= item.ordering ?? 0 %>" class="form-control form-control-sm <%= errors.ordering && 'is-invalid' %>">
-					<%- `<span class="error invalid-feedback">${errors.ordering}</span>` %>
-				</div>
-			</div>
+      <div class="form-group row">
+        <label for="name" class="col-sm-2 col-form-label text-sm-right required">Category</label>
+        <div class="col-xs-12 col-sm-8">
+          <%- selectCategory(listCategory,item.categoriesId,'',errors.categoriesId) %>
+          </select>
+        </div>
+      </div>
 
-			<!-- Avatar -->
-			<div class="form-group row">
-				<label for="image" class="col-sm-2 col-form-label text-sm-right required">Image</label>
-				<div class="col-xs-12 col-sm-8">
-					<div class="custom-file">
-						<input id="imgInp" class="form-control custom-file-input <%= errors.image && 'is-invalid' %>" type="file" name="image">
-						<label class="custom-file-label" for="imgInp">Choose file</label>
-						<%- `<span class="error invalid-feedback">${errors.image}</span>` %>
-					</div>
-				</div>
-			</div>
+      <div class="form-group row">
+        <label for="name" class="col-sm-2 col-form-label text-sm-right required">Ordering</label>
+        <div class="col-xs-12 col-sm-8">
+          <input type="text" name="ordering" value="<%= item.ordering ?? 0 %>" class="form-control form-control-sm <%= errors.ordering && 'is-invalid' %>">
+          <%- `<span class="error invalid-feedback">${errors.ordering}</span>` %>
+        </div>
+      </div>
 
-				<div class="form-group row">
-					<div class="col-sm-2 col-form-label"></div>
-					<div class="col-xs-12 col-sm-8">
-					<%- imageHelper(folderUpload, item.image, item.name,'200','200'); %>
-					</div>
-				</div>
-			
+      <!-- Image -->
+      <div class="form-group row">
+        <label for="image" class="col-sm-2 col-form-label text-sm-right required">Image</label>
+        <div class="col-xs-12 col-sm-8">
+          <div class="custom-file">
+            <input id="imgInp" class="form-control custom-file-input <%= errors.image && 'is-invalid' %>" type="file" name="image">
+            <label class="custom-file-label" for="imgInp">Choose file</label>
+            <%- `<span class="error invalid-feedback">${errors.image}</span>` %>
+          </div>
+        </div>
+      </div>
+      <div class="form-group row">
+        <div class="col-sm-2 col-form-label"></div>
+        <div class="col-xs-12 col-sm-8">
+          <%- imageHelper(folderUpload, item.image, item.name,'200','200'); %>
+        </div>
+      </div>
 
-			<div class="form-group row">
-				<label for="status" class="col-sm-2 col-form-label text-sm-right required">Status</label>
-				<div class="col-xs-12 col-sm-8">
-					<select id="form[status]" name="status" class="custom-select custom-select-sm <%= errors.status && 'is-invalid' %>">
-						<option value="novalue">Choose Status</option>
-						<option value="active" <%= (item.status == "active") ? 'selected="selected"' : '' %> >Active</option>
-						<option value="inactive" <%= (item.status == "inactive") ? 'selected="selected"' : '' %> >Inactive</option>
-					</select>
-					<%- `<span class="error invalid-feedback">${errors.status}</span>` %>
-				</div>
-			</div>
+      <!-- More Image -->
 
-			<div class="form-group row">
-				<label for="description" class="col-sm-2 col-form-label text-sm-right required">Description</label>
-				<div class="col-xs-12 col-sm-8">
-					<textarea id="editor" name="description"><%= item.description %></textarea>
-					<!-- <span class="error invalid-feedback">undefined</span> -->
-				</div>
-			</div>
+      <!-- <div class="form-group row">
+        <label for="moreImage" class="col-sm-2 col-form-label text-sm-right required">More Image</label>
+        <div class="col-xs-12 col-sm-8">
+          <div class="custom-file">
+            <input id="moreImgInp" class="form-control custom-file-input <%= errors.moreImage && 'is-invalid' %>" type="file" name="moreImage">
+            <label class="custom-file-label" for="moreImgInp">Choose file</label>
+            <%- `<span class="error invalid-feedback">${errors.moreImage}</span>` %>
+          </div>
+        </div>
+      </div>
 
-		</div>
-		<div class="card-footer">
-			<div class="col-12 col-sm-8 offset-sm-2">
-				<input class="form-control" name="id" value="<%= item.id %>" type="hidden" >
-				<input name="image_old" value="<%= item.thumbnail %>" type="hidden"  />
-				<input name="image_uploaded" value="" type="hidden" id="image_uploaded"  />
-				<button type="submit" class="btn btn-sm btn-success mr-1"> Submit</button>
-				<a href="<%= linkPrefix %>" class="btn btn-sm btn-danger mr-1"> Cancel</a>
-			</div>
-		</div>
-	</form>
+      <div class="form-group row">
+        <div class="col-sm-2 col-form-label"></div>
+        <div class="col-xs-12 col-sm-8">
+          <%- moreImageHelper(folderUpload, item.moreImage, item.name,'200','200'); %>
+        </div>
+      </div> -->
+
+
+      <div class="form-group row">
+        <label for="status" class="col-sm-2 col-form-label text-sm-right required">Status</label>
+        <div class="col-xs-12 col-sm-8">
+          <select id="form[status]" name="status" class="custom-select custom-select-sm <%= errors.status && 'is-invalid' %>">
+            <option value="novalue">Choose Status</option>
+            <option value="active" <%=(item.status=="active" ) ? 'selected="selected"' : '' %>>Active</option>
+            <option value="inactive" <%=(item.status=="inactive" ) ? 'selected="selected"' : ''
+										%>>Inactive</option>
+          </select>
+          <%- `<span class="error invalid-feedback">${errors.status}</span>` %>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="description" class="col-sm-2 col-form-label text-sm-right required">Description</label>
+        <div class="col-xs-12 col-sm-8">
+          <textarea id="editor" name="description"><%= item.description %></textarea>
+        </div>
+      </div>
+
+    </div>
+    <div class="card-footer">
+      <div class="col-12 col-sm-8 offset-sm-2">
+        <input class="form-control" name="id" value="<%= item.id %>" type="hidden">
+        <input name="image_old" value="<%= item.thumbnail %>" type="hidden" />
+        <input name="image_uploaded" value="" type="hidden" id="image_uploaded" />
+        <button type="submit" class="btn btn-sm btn-success mr-1"> Submit</button>
+        <a href="<%= linkPrefix %>" class="btn btn-sm btn-danger mr-1"> Cancel</a>
+      </div>
+    </div>
+  </form>
 </div>
 
 <script>
-	ClassicEditor
-    .create( document.querySelector( '#editor' ) )
-    .catch( error => {
-            console.error( error );
-    } );
-		
-		imgInp.onchange = evt => {
-			const [file] = imgInp.files
-			if (file) {
-				showImage.src = URL.createObjectURL(file)
-				image_uploaded.setAttribute('value','uploaded')
-			}
-		}
-		function notImage(e,folder) {
-				e.setAttribute('src',folder+'no-avatar.png')
-		}
+  ClassicEditor
+    .create(document.querySelector('#editor'))
+    .catch(error => {
+      console.error(error);
+    });
+
+  imgInp.onchange = evt => {
+    const [file] = imgInp.files
+    if (file) {
+      showImage.src = URL.createObjectURL(file)
+      image_uploaded.setAttribute('value', 'uploaded')
+    }
+  }
+  moreImgInp.onchange = evt => {
+    const [file] = moreImgInp.files
+    if (file) {
+      showImage.src = URL.createObjectURL(file)
+      image_uploaded.setAttribute('value', 'uploaded')
+    }
+  }
+
+  function notImage(e, folder) {
+    e.setAttribute('src', folder + 'no-avatar.png')
+  }
 </script>
