--- a/app/vviews/admin/pages/users/form.ejs
+++ b/app/vviews/admin/pages/users/form.ejs
@@ -1,53 +1,107 @@
+<% include ./../../helpers/image %>
 <% 
 	const collection = "users";
 	const linkPrefix = systemConfig.prefixAdmin + `/${collection}/`;
+	errors = errors ?? {};
+	const folderUpload 	= `uploads/${collection}/`;
 %>
 
-<% include ./../../elements/errors %>
-
 <div class="card card-info card-outline">
-	<form action="<%= linkPrefix %>save/" method="POST" class="mb-0" >
+	<form action="<%= linkPrefix %>save/" method="POST" class="mb-0" enctype="multipart/form-data" name="form-upload">
 		<div class="card-body">
 		
 			<div class="form-group row">
-				<label for="name" class="col-sm-2 col-form-label text-sm-right required">Username</label>
+				<label for="username" class="col-sm-2 col-form-label text-sm-right required">Name</label>
 				<div class="col-xs-12 col-sm-8">
-					<input type="text" name="username" value="<%= item.username %>" class="form-control form-control-sm">
+					<input type="text" name="username" value="<%= item.username %>" class="form-control form-control-sm <%= errors.username && 'is-invalid' %>" onKeyUp="handleSlug(
+						'<%= linkPrefix %>',
+						this,
+						)">
+					<%- `<span class="error invalid-feedback">${errors.username}</span>` %>
+				</div>
+			</div>
+			<div class="form-group row">
+				<label for="email" class="col-sm-2 col-form-label text-sm-right required">Email</label>
+				<div class="col-xs-12 col-sm-8">
+					<input type="text" name="email" value="<%= item.email %>" class="form-control form-control-sm <%= errors.email && 'is-invalid' %>" onKeyUp="handleSlug(
+						'<%= linkPrefix %>',
+						this,
+						)">
+					<%- `<span class="error invalid-feedback">${errors.email}</span>` %>
 				</div>
 			</div>
 
+			<!-- Avatar -->
 			<div class="form-group row">
-				<label for="name" class="col-sm-2 col-form-label text-sm-right required">Password</label>
+				<label for="avatar" class="col-sm-2 col-form-label text-sm-right required">Avatar</label>
 				<div class="col-xs-12 col-sm-8">
-					<input type="text" name="password" value="<%= item.password %>" class="form-control form-control-sm">
+					<div class="custom-file">
+						<input id="imgInp" class="form-control custom-file-input <%= errors.avatar && 'is-invalid' %>" type="file" name="avatar">
+						<label class="custom-file-label" for="imgInp">Choose file</label>
+						<%- `<span class="error invalid-feedback">${errors.avatar}</span>` %>
+					</div>
 				</div>
 			</div>
 
-			<div class="form-group row">
-				<label for="name" class="col-sm-2 col-form-label text-sm-right required">Level</label>
-				<div class="col-xs-12 col-sm-8">
-					<input type="number" name="level" value="<%= item.level %>" class="form-control form-control-sm">
+				<div class="form-group row">
+					<div class="col-sm-2 col-form-label"></div>
+					<div class="col-xs-12 col-sm-8">
+					<%- imageHelper(folderUpload, item.avatar, item.name,'200','200'); %>
+					</div>
 				</div>
-			</div>
+			
 
 			<div class="form-group row">
-				<label for="status" class="col-sm-2 col-form-label text-sm-right">Status</label>
+				<label for="status" class="col-sm-2 col-form-label text-sm-right required">Status</label>
 				<div class="col-xs-12 col-sm-8">
-					<select id="form[status]" name="status" class="custom-select custom-select-sm">
+					<select id="form[status]" name="status" class="custom-select custom-select-sm <%= errors.status && 'is-invalid' %>">
 						<option value="novalue">Choose Status</option>
 						<option value="active" <%= (item.status == "active") ? 'selected="selected"' : '' %> >Active</option>
 						<option value="inactive" <%= (item.status == "inactive") ? 'selected="selected"' : '' %> >Inactive</option>
 					</select>
+					<%- `<span class="error invalid-feedback">${errors.status}</span>` %>
 				</div>
 			</div>
-		
+			<div class="form-group row">
+				<label for="isAdmin" class="col-sm-2 col-form-label text-sm-right required">Status</label>
+				<div class="col-xs-12 col-sm-8">
+					<select id="form[isAdmin]" name="isAdmin" class="custom-select custom-select-sm <%= errors.isAdmin && 'is-invalid' %>">
+						<option value="novalue">Choose Role</option>
+						<option value="yes" <%= (item.isAdmin == "active") ? 'selected="selected"' : '' %> >Yes</option>
+						<option value="no" <%= (item.isAdmin == "inactive") ? 'selected="selected"' : '' %> >No</option>
+					</select>
+					<%- `<span class="error invalid-feedback">${errors.isAdmin}</span>` %>
+				</div>
+			</div>
+
 		</div>
 		<div class="card-footer">
 			<div class="col-12 col-sm-8 offset-sm-2">
 				<input class="form-control" name="id" value="<%= item.id %>" type="hidden" >
+				<input name="image_old" value="<%= item.avatar %>" type="hidden"  />
+				<input name="image_uploaded" value="" type="hidden" id="image_uploaded"  />
 				<button type="submit" class="btn btn-sm btn-success mr-1"> Submit</button>
 				<a href="<%= linkPrefix %>" class="btn btn-sm btn-danger mr-1"> Cancel</a>
 			</div>
 		</div>
 	</form>
 </div>
+
+<script>
+	ClassicEditor
+    .create( document.querySelector( '#editor' ) )
+    .catch( error => {
+            console.error( error );
+    } );
+		
+		imgInp.onchange = evt => {
+			const [file] = imgInp.files
+			if (file) {
+				showImage.src = URL.createObjectURL(file)
+				image_uploaded.setAttribute('value','uploaded')
+			}
+		}
+		function notImage(e,folder) {
+				e.setAttribute('src',folder+'no-avatar.png')
+		}
+</script>
