--- a/app/vviews/admin/pages/users/list.ejs
+++ b/app/vviews/admin/pages/users/list.ejs
@@ -1,12 +1,18 @@
 <% include ./../../helpers/filter-status %>
+<% include ./../../helpers/filter-isAdmin %>
 <% include ./../../helpers/action %>
 <% include ./../../helpers/pagination %>
 <% include ./../../helpers/status %>
+<% include ./../../helpers/isAdmin %>
 <% include ./../../helpers/highlight %>
+<% include ./../../helpers/userTimeInfo %>
+<% include ./../../helpers/sortField %>
+<% include ./../../helpers/image %>
 <% 
 	const collection = "users";
 	const linkPrefix = systemConfig.prefixAdmin + `/${collection}/`;
 	const linkAjax = linkPrefix + 'ajax/';
+	const folderUpload 	= `uploads/${collection}/`;
 %>
 
 <%- locals.flash %>
@@ -21,7 +27,7 @@
 	<div class="card-body">
 		<div class="row justify-content-between">
 			<div class="mb-1">
-				<%- filterStatusHelper(collection, statusFilter, keyword) %>	 
+				<%- filterStatusHelper(collection, statusFilter, keyword) %>
 			</div>
 			
 			<div class="mb-1">
@@ -50,7 +56,7 @@
 	<div class="card-body">
 		<!-- Control -->
 		<form action="" method="post" class="table-responsive" id="zt-form">
-			<%- actionHelper(collection) %>
+			<!-- <%- actionHelper(collection) %> -->
 
 			<!-- List Content -->
 		
@@ -64,45 +70,59 @@
 							</div>
 						</th>
 						<th class="text-center">#</a></th>
-						<th class="text-center">Name</a></th>
+						<th class="text-center">Avatar</th>
+						<th class="text-center sort">
+							<%- sortField(linkPrefix,'Name','name',sort) %>
+						</th>
+						<th class="text-center sort">
+							<%- sortField(linkPrefix,'Email','email',sort) %>
+						</th>
 						<th class="text-center">Status</a></th>
-						<th class="text-center">Level</a></th>
-						<th class="text-center">Action</th>
+						<th class="text-center">Is Admin</a></th>
+						<!-- <th class="text-center">Created</a></th>
+						<th class="text-center">Modified</a></th>
+						<th class="text-center">Action</th> -->
 					</tr>
 				</thead>
 				<tbody>
 					
-					<% items.forEach( (item, index) => { 
-						%>
+					<% items.forEach( (item, index) => { %>
 					<tr>
 						<td class="text-center">
-							<div class="customs-control custom-checkbox">
+							<div class="custom-control custom-checkbox">
 								<input class="custom-control-input" type="checkbox" id="checkbox-<%= item.id %>" name="cid" value="<%= item.id %>">
 								<label for="checkbox-<%= item.id %>" class="custom-control-label"></label>
 							</div>
 						
 						</td>
 						<td class="text-center"><%= index+1 %></td>
+						<td class="text-center"><%- imageHelper(folderUpload, item.avatar, item.name); %></td>
 						<td class="text-center"><%- highlightHelper(item.username, keyword) %></td>
-						<td class="text-center position-relative">
+						<td class="text-center"><%- highlightHelper(item.email, keyword) %></td>
+						<td class="text-center position-relative" id="<%= item.id %>-status">
 							<%- statusHelper(collection, item.status, item.id) %>
 						</td>
-						
-						<td class="text-center">
-							<input type="number" value="<%= item.level %>" class="text-center ordering">
+						<td class="text-center position-relative" id="<%= item.id %>-isAdmin">
+							<%- isAdminHelper(collection, item.isAdmin, item.id) %>
 						</td>
-						
+						<!-- <td class="text-center">
+							<%- showUserTimeInfo(item.createdAt) %>
+						</td>
 						<td class="text-center">
+							<%- showUserTimeInfo(item.updatedAt) %>
+						</td> -->
+						<!-- <td class="text-center">
 							<a href="<%= linkPrefix %>form/<%= item.id %>" class="rounded-circle btn btn-sm btn-info" title="Edit">
 								<i class="fas fa-pencil-alt"></i>
 							</a>
 
-							<a href="<%= linkPrefix %>delete/<%= item.id %>" class="rounded-circle btn btn-sm btn-danger" title="Delete">
+							<a class="rounded-circle btn btn-sm btn-danger btn-delete" title="Delete" data-toggle="modal" href="#exampleModal" data-url='<%= linkPrefix %>delete/<%= item.id %>'>
 								<i class="fas fa-trash-alt"></i>
 							</a>
-						</td>
+						</td> -->
 					</tr>
 					<% }) %>
+					
 				</tbody>
 			</table>
 		</form>
@@ -110,4 +130,25 @@
 	<div class="card-footer clearfix">
 		<%- paginationHelper(pagination, collection, currentStatus, keyword) %>
 	</div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Delete</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Bạn có chắc muốn xóa phần tử này?
+      </div>
+      <div class="modal-footer">
+        <a href="#" class="btn btn-primary">Ok</a>
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
 </div>
