--- a/app/vviews/admin/elements/header.ejs
+++ b/app/vviews/admin/elements/header.ejs
@@ -7,3 +7,4 @@
 <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
 <link href="css/sb-admin.css" rel="stylesheet">
 <link href="css/custom.css" rel="stylesheet">
+<link rel="stylesheet" href="https://unpkg.com/dropzone@5/dist/min/dropzone.min.css" type="text/css" />
