--- a/app/vviews/admin/elements/scripts.ejs
+++ b/app/vviews/admin/elements/scripts.ejs
@@ -4,3 +4,4 @@
 <script src="js/sb-admin.js"></script>
 <script src="js/jquery-ui.js"></script>
 <script src="js/custom.js"></script>
+<script src="https://unpkg.com/dropzone@5/dist/min/dropzone.min.js"></script>
