--- a/app/vviews/ecommerce/elements/banner.ejs
+++ b/app/vviews/ecommerce/elements/banner.ejs
@@ -1,4 +1,8 @@
-        <!--Parallax Section-->
+<% 
+	const collection = "sliders";
+	const folderUpload 	= `uploads/${collection}/`;
+%>
+<!--Parallax Section-->
         <div class="section">
             <div class="hero hero--large hero__overlay bg-size">
             	<img class="bg-img" src="frontend/assets/images/parallax-banners/parallax-banner.jpg" alt="" />
