--- a/app/vviews/ecommerce/elements/script.ejs
+++ b/app/vviews/ecommerce/elements/script.ejs
@@ -9,6 +9,10 @@
  <script src="frontend/assets/js/popper.min.js"></script>
  <script src="frontend/assets/js/lazysizes.js"></script>
  <script src="frontend/assets/js/main.js"></script>
+
+ <!-- Photoswipe Gallery -->
+ <script src="frontend/assets/js/vendor/photoswipe.min.js"></script>
+ <script src="frontend/assets/js/vendor/photoswipe-ui-default.min.js"></script>
  <!--For Newsletter Popup-->
  <script>
     jQuery(document).ready(function(){  
