--- a/app/vviews/ecommerce/elements/slider.ejs
+++ b/app/vviews/ecommerce/elements/slider.ejs
@@ -1,15 +1,22 @@
-    	<!--Home slider-->
+<% 
+	const collection = "sliders";
+	const folderUpload 	= `uploads/${collection}/`;
+%>
+<!--Home slider-->
     	<div class="slideshow slideshow-wrapper pb-section">
         	<div class="home-slideshow">
             	<div class="slide">
                 	<div class="blur-up lazyload">
-                        <img class="blur-up lazyload" data-src="frontend/assets/images/slideshow-banners/home2-default-banner1.jpg" src="frontend/assets/images/slideshow-banners/home2-default-banner1.jpg" alt="Shop Our New Collection" title="Shop Our New Collection" />
+                        <img class="blur-up lazyload" data-src="<%= folderUpload + listSliders[1].avatar %>"
+                        src="<%= folderUpload + listSliders[1].avatar %>" alt="<%= listSliders[1].name %>"
+                        title="<%= listSliders[1].name %>" />
                         <div class="slideshow__text-wrap slideshow__overlay classic middle">
                             <div class="slideshow__text-content middle">
                             	<div class="container">
                                     <div class="wrap-caption right">
-                                        <h2 class="h1 mega-title slideshow__title">Our New Collection</h2>
-                                        <span class="mega-subtitle slideshow__subtitle">Save up to 50% Off</span>
+                                        <h2 class="h1 mega-title slideshow__title">BỘ SƯU TẬP MỚI</h2>
+                                        <span class="mega-subtitle slideshow__subtitle"><%= listSliders[1].description %>
+                                        </span>
                                         <span class="btn">Shop now</span>
                                     </div>
                                 </div>
@@ -19,13 +26,15 @@
                 </div>
                 <div class="slide">
                 	<div class="blur-up lazyload">
-                        <img class="blur-up lazyload" data-src="frontend/assets/images/slideshow-banners/home2-default-banner2.jpg" src="frontend/assets/images/slideshow-banners/home2-default-banner2.jpg" alt="Summer Bikini Collection" title="Summer Bikini Collection" />
+                        <img class="blur-up lazyload" data-src="<%= folderUpload + listSliders[0].avatar %>"
+                        src="<%= folderUpload + listSliders[0].avatar %>" alt="<%= listSliders[0].name %>"
+                        title="<%= listSliders[0].name %>" />
                         <div class="slideshow__text-wrap slideshow__overlay classic middle">
                             <div class="slideshow__text-content middle">
                             	<div class="container">
                                     <div class="wrap-caption center">
-                                        <h2 class="h1 mega-title slideshow__title">Fashion &amp; Show</h2>
-                                        <span class="mega-subtitle slideshow__subtitle">A World Fashion and Trendy Fashion Clother's</span>
+                                        <h2 class="h1 mega-title slideshow__title">THỜI TRANG &amp; TRÌNH DIỄN</h2>
+                                        <span class="mega-subtitle slideshow__subtitle"><%= listSliders[0].description %></span>
                                         <span class="btn">Shop now</span>
                                     </div>
                                 </div>
