--- a/app/vviews/ecommerce/elements/footer.ejs
+++ b/app/vviews/ecommerce/elements/footer.ejs
@@ -1,4 +1,8 @@
-    <!--Footer-->
+<% 
+const collection = "settings";
+const folderUpload 	= `uploads/${collection}/`;
+%>
+   <!--Footer-->
     <footer id="footer" class="footer-2">
         <div class="newsletter-section">
             <div class="container">
@@ -71,12 +75,12 @@
                                 <li><a href="#">Support Center</a></li>
                             </ul>
                         </div>
-                        <div class="col-12 col-sm-12 col-md-3 col-lg-3 contact-box">
-                        	<h4 class="h4">Contact Us</h4>
-                            <ul class="addressFooter">
-                            	<li><i class="icon anm anm-map-marker-al"></i><p>55 Gallaxy Enque,<br>2568 steet, 23568 NY</p></li>
-                                <li class="phone"><i class="icon anm anm-phone-s"></i><p>(440) 000 000 0000</p></li>
-                                <li class="email"><i class="icon anm anm-envelope-l"></i><p>sales@yousite.com</p></li>
+                        <div class="col-12 col-sm-12 col-md-3 col-lg-3 footer-links">
+                        	<h4 class="h4">Liên Hệ Với Chúng Tôi</h4>
+                            <ul>
+                            	<li><i class="icon anm anm-map-marker-al"></i><a href="#"> <%= item.address %> </a></li>
+                            	<li><i class="icon anm anm-phone-s"></i><a href="#"> <%= item.phoneHeader %> </a></li>
+                            	<li><i class="icon anm anm-envelope-l"></i><a href="#"> <%= item.email %> </a></li>
                             </ul>
                         </div>
                     </div>
