--- a/app/vviews/admin/html/sidebar.ejs
+++ b/app/vviews/admin/html/sidebar.ejs
@@ -1,9 +1,10 @@
 <%  
     let arrMenu = [
         {name: 'Dashboard', icon: 'fa-tachometer-alt', link: `${systemConfig.prefixAdmin}/dashboard`},
-        {name: 'Products', icon: 'fa-file', link: `${systemConfig.prefixAdmin}/products`},
+        {name: 'Products', icon: 'fas fa-shopping-cart', link: `${systemConfig.prefixAdmin}/products`},
         {name: 'Categories', icon: 'fa-window-restore', link: `${systemConfig.prefixAdmin}/categories`},
-        {name: 'Articles', icon: 'fa-newspaper', link: `${systemConfig.prefixAdmin}/articles`},
+        {name: 'Attributes', icon: 'fas fa-tags', link: `${systemConfig.prefixAdmin}/attributes`},
+        {name: 'Blog', icon: 'fa-newspaper', link: `${systemConfig.prefixAdmin}/articles`},
         {name: 'Sliders', icon: 'fa-images', link: `${systemConfig.prefixAdmin}/sliders`},
         {name: 'Menu', icon: 'fas fa-bars', link: `${systemConfig.prefixAdmin}/menu`},
         // {name: 'Rss', icon: 'fas fa-rss', link: `${systemConfig.prefixAdmin}/rss`},
@@ -26,7 +27,7 @@
     <!-- Brand Logo -->
     <a href="index3.html" class="brand-link">
         <img src="adminlte/images/logo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-        <span class="brand-text font-weight-light">ZendVN</span>
+        <span class="brand-text font-weight-light">DANH</span>
     </a>
 
     <!-- Sidebar -->
@@ -37,7 +38,7 @@
                 <img src="adminlte/images/default-user.jpg" class="img-circle elevation-2" alt="User Image">
             </div>
             <div class="info">
-                <a href="#" class="d-block">Admin ZendVN</a>
+                <a href="#" class="d-block">Admin DANH</a>
             </div>
         </div>
 
