--- a/app/vviews/ecommerce/elements/bestseller.ejs
+++ b/app/vviews/ecommerce/elements/bestseller.ejs
@@ -16,7 +16,7 @@
                             <!-- start product image -->
                             <div class="product-image">
                                 <!-- start product image -->
-                                <a href="/product/<%= items.slug %>" class="grid-view-item__link">
+                                <a href="product/<%= items.slug %>" class="grid-view-item__link">
                                     <!-- image -->
                                     <img class="primary blur-up lazyload"
                                         data-src="<%= folderUpload + items.image %>"
