--- a/app/vviews/ecommerce/elements/slider.ejs
+++ b/app/vviews/ecommerce/elements/slider.ejs
@@ -15,7 +15,7 @@
                             	<div class="container">
                                     <div class="wrap-caption right">
                                         <h2 class="h1 mega-title slideshow__title">BỘ SƯU TẬP MỚI</h2>
-                                        <span class="mega-subtitle slideshow__subtitle"><%= listSliders[1].description %>
+                                        <span class="mega-subtitle slideshow__subtitle"><%- listSliders[1].description %>
                                         </span>
                                         <span class="btn">Shop now</span>
                                     </div>
@@ -34,7 +34,7 @@
                             	<div class="container">
                                     <div class="wrap-caption center">
                                         <h2 class="h1 mega-title slideshow__title">THỜI TRANG &amp; TRÌNH DIỄN</h2>
-                                        <span class="mega-subtitle slideshow__subtitle"><%= listSliders[0].description %></span>
+                                        <span class="mega-subtitle slideshow__subtitle"><%- listSliders[0].description %></span>
                                         <span class="btn">Shop now</span>
                                     </div>
                                 </div>
