--- a/app/vviews/ecommerce/frontend.ejs
+++ b/app/vviews/ecommerce/frontend.ejs
@@ -8,7 +8,9 @@
 <body>
 	<div class="pageWrapper">
 			<% include ./elements/header %>
+			<% if(slider == true){ %>
 				<% include ./elements/slider %>
+            <% } %>
 					<div id="page-content">
 						<%- body %>
 						</div>
